--- a/Pipfile
+++ b/Pipfile
@@ -25,12 +25,25 @@ markupsafe = "==2.1.2"
 sqlalchemy = "==1.4.46"
 werkzeug = "==2.2.2"
 wtforms = "==3.0.1"
-boto3 = "*"
+boto3 = "==1.34.50"
 importlib-metadata = "==6.9.0"
 zipp = "==3.17.0"
-flask-socketio = "*"
+flask-socketio = "==5.3.6"
 eventlet = "==0.30.2"
-gevent = "*"
+gevent = "==24.2.1"
+bidict = "==0.23.1"
+botocore = "==1.34.50"
+dnspython = "==1.16.0"
+h11 = "==0.14.0"
+jmespath = "==1.0.1"
+python-engineio = "==4.9.0"
+python-socketio = "==5.11.1"
+s3transfer = "==0.10.0"
+simple-websocket = "==1.0.0"
+urllib3 = "==1.26.18"
+wsproto = "==1.2.0"
+"zope.event" = "==5.0"
+"zope.interface" = "==6.2"
 
 [dev-packages]
 
