--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ setuptools==69.1.1; python_version >= '3.8'
 simple-websocket==1.0.0; python_version >= '3.6'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.46; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-urllib3==1.26.18; python_version < '3.10'
+urllib3==1.26.18; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 werkzeug==2.2.2; python_version >= '3.7'
 wsproto==1.2.0; python_full_version >= '3.7.0'
 wtforms==3.0.1; python_version >= '3.7'
