--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,7 @@ werkzeug = "==2.2.2"
 wtforms = "==3.0.1"
 boto3 = "==1.34.50"
 importlib-metadata = "==6.9.0"
-zipp = "==3.17.0"
+zipp = "==3.16.2"
 flask-socketio = "==5.3.6"
 eventlet = "==0.30.2"
 gevent = "==24.2.1"
@@ -40,10 +40,20 @@ python-engineio = "==4.9.0"
 python-socketio = "==5.11.1"
 s3transfer = "==0.10.0"
 simple-websocket = "==1.0.0"
-urllib3 = "==1.26.18"
+urllib3 = "==1.26.16"
 wsproto = "==1.2.0"
 "zope.event" = "==5.0"
 "zope.interface" = "==6.2"
+cachetools = "==5.3.1"
+certifi = "==2023.7.22"
+charset-normalizer = "==3.2.0"
+google-auth-oauthlib = "==1.0.0"
+google-auth = "==2.22.0"
+oauthlib = "==3.2.2"
+requests-oauthlib = "==1.3.1"
+requests = "==2.31.0"
+rsa = "==4.9"
+psycopg2 = "==2.9.9"
 
 [dev-packages]
 
