--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,16 @@ wtforms==3.0.1; python_version >= '3.7'
 zipp==3.17.0; python_version >= '3.8'
 zope.event==5.0; python_version >= '3.7'
 zope.interface==6.2; python_version >= '3.7'
+cachetools==5.3.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+google-auth-oauthlib==1.0.0
+google-auth==2.22.0
+oauthlib==3.2.2
+requests-oauthlib==1.3.1
+requests==2.31.0
+rsa==4.9
+setuptools==68.0.0
+urllib3==1.26.16
+zipp==3.16.2
+psycopg2==2.9.9
