--- a/Pipfile
+++ b/Pipfile
@@ -53,6 +53,7 @@ oauthlib = "==3.2.2"
 requests-oauthlib = "==1.3.1"
 requests = "==2.31.0"
 rsa = "==4.9"
+psycopg2 = "==2.9.9"
 
 [dev-packages]
 
